Convert liftback value types to records and simplify per-worker counters